--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/rpiambulance/aqua/issues"
   },
-  "homepage": "https://github.com/rpiambulance/aqua#readme"
+  "homepage": "https://github.com/rpiambulance/aqua#readme",
+  "dependencies": {
+    "body-parser": "^1.18.3",
+    "express": "^4.16.3",
+    "mysql": "^2.16.0"
+  }
 }
