--- a/angular/package.json
+++ b/angular/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-server": "^6.1.10",
     "@angular/router": "^6.1.10",
     "@ng-bootstrap/ng-bootstrap": "^3.3.0",
+    "angular-font-awesome": "^3.1.2",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.7",
     "font-awesome": "^4.7.0",
