--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   "homepage": "https://github.com/rpiambulance/aqua#readme",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "bootstrap": "^4.1.3",
     "express": "^4.16.3",
+    "font-awesome": "^4.7.0",
     "mysql": "^2.16.0"
   }
 }
