--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "bootstrap": "^4.1.3",
     "express": "^4.16.3",
     "font-awesome": "^4.7.0",
-    "mysql": "^2.16.0"
+    "mysql": "^2.16.0",
+    "node-cron": "^2.0.3",
+    "sendmail": "^1.4.1"
   }
 }
