--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "bootstrap": "^4.1.3",
-    "express": "^4.16.3",
+    "express": "^4.16.4",
     "font-awesome": "^4.7.0",
-    "mysql": "^2.16.0"
+    "http-errors": "^1.7.1",
+    "morgan": "^1.9.1",
+    "mysql": "^2.16.0",
+    "serve-favicon": "^2.5.0"
   }
 }
