--- a/angular/package.json
+++ b/angular/package.json
@@ -41,8 +41,10 @@
     "font-awesome": "^4.7.0",
     "http-errors": "^1.7.1",
     "jquery": "^3.3.1",
+    "jw-bootstrap-switch-ng2": "^2.0.2",
     "morgan": "^1.9.1",
     "mysql": "^2.16.0",
+    "ngx-toggle-switch": "^2.0.5",
     "node-cron": "^2.0.3",
     "popper.js": "^1.14.4",
     "rxjs": "^6.3.3",
