--- a/angular/package.json
+++ b/angular/package.json
@@ -33,6 +33,7 @@
     "@angular/platform-server": "^6.1.10",
     "@angular/router": "^6.1.10",
     "@ng-bootstrap/ng-bootstrap": "^3.3.0",
+    "@ng-select/ng-select": "^2.11.1",
     "angular-font-awesome": "^3.1.2",
     "body-parser": "^1.18.3",
     "bootstrap": "^4.1.3",
