--- a/angular/package.json
+++ b/angular/package.json
@@ -32,9 +32,9 @@
     "@angular/platform-browser-dynamic": "^6.1.10",
     "@angular/platform-server": "^6.1.10",
     "@angular/router": "^6.1.10",
+    "@fortawesome/fontawesome-free": "^5.4.1",
     "@ng-bootstrap/ng-bootstrap": "^3.3.0",
     "@ng-select/ng-select": "^2.11.1",
-    "angular-font-awesome": "^3.1.2",
     "body-parser": "^1.18.3",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.7",
