--- a/angular/package.json
+++ b/angular/package.json
@@ -39,6 +39,8 @@
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.7",
     "express": "^4.16.4",
+    "express-mysql-session": "^2.0.1",
+    "express-session": "^1.15.6",
     "font-awesome": "^4.7.0",
     "http-errors": "^1.7.1",
     "jquery": "^3.3.1",
